2011-06-19  Adam Bergkvist  <adam.bergkvist@ericsson.com>

        Reviewed by Martin Robinson.

        [GTK] Enable Media Stream feature and make it default on
        https://bugs.webkit.org/show_bug.cgi?id=60394

        Unskipped the Media Stream tests.

        * platform/gtk/Skipped:

2011-06-19  Dirk Schulze  <krit@webkit.org>

        Uneviewed.

        SVGAnimatorFactory does not support SVGNumber
        https://bugs.webkit.org/show_bug.cgi?id=62938
        
        Add animation tests of previous patch to skip list for webkit2.

        * platform/mac-wk2/Skipped:

2011-06-19  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVGAnimatorFactory does not support SVGNumber
        https://bugs.webkit.org/show_bug.cgi?id=62938
        
        Added new tests to check behavior on SVGNumber animation.

        * svg/animations/script-tests/svgnumber-animation-1.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
        * svg/animations/script-tests/svgnumber-animation-2.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
        * svg/animations/script-tests/svgnumber-animation-3.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
        * svg/animations/svgnumber-animation-1-expected.txt: Added.
        * svg/animations/svgnumber-animation-1.html: Added.
        * svg/animations/svgnumber-animation-2-expected.txt: Added.
        * svg/animations/svgnumber-animation-2.html: Added.
        * svg/animations/svgnumber-animation-3-expected.txt: Added.
        * svg/animations/svgnumber-animation-3.html: Added.

2011-06-19  Stephen White  <senorblanco@chromium.org>

        Unreviewed.

        Marking several tests as crashing on Mac GPU.

        * platform/chromium/test_expectations.txt:

2011-06-19  Robert Hogan  <robert@webkit.org>

        Reviewed by Alexey Proskuryakov.
