@@ -567,6 +567,9 @@ PASS Valid:   "if (0) obj.foo_; "
 PASS Valid:   "function f() { if (0) obj.foo_;  }"
 PASS Valid:   "if (0) obj.foo\u03bb; "
 PASS Valid:   "function f() { if (0) obj.foo\u03bb;  }"
+PASS e.line is 1
+PASS foo is 'PASS'
+PASS bar is 'PASS'
 PASS successfullyParsed is true
 
 TEST COMPLETE
