@@ -1,3 +1,15 @@
+2011-06-19  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Correct logic for putting errors on the correct line when handling JSONP
+        https://bugs.webkit.org/show_bug.cgi?id=62962
+
+        Add test case this time
+
+        * fast/js/parser-syntax-check-expected.txt:
+        * fast/js/script-tests/parser-syntax-check.js:
+
 2011-06-19  Adam Bergkvist  <adam.bergkvist@ericsson.com>
 
         Reviewed by Martin Robinson.
